@@ -10,9 +10,9 @@ Requirements:
 
        Allegro CL   Version 8.1
        CLISP        Version 2.47
-       Clozure CL   Version 1.3 (r12235)
+       Clozure CL   Version 1.3 (r12267)
        CMUCL        Version 19f
-       ECL          Version 9.6.1 (configure with --enable-threads if 
+       ECL          Version 9.6.2 (configure with --enable-threads if 
                                    possible; --enable-smallcons & 
                                      --enable-gengc are also recommended)
        Lispworks    Version 5.1.2
@@ -32,7 +32,7 @@ Requirements:
    See PORTING for information on porting GBBopen to other Common Lisp
    implementations.
 
-Current Status Notes (June 9, 2009):
+Current Status Notes (June 19, 2009):
 
  - Implementation work is progressing on a regular basis.  See the list of
    pending development activities maintained on the "Development Activities"
